frontend/test/should_pass/exectype_AssignAttributeToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia ;> f:foo=x.f && i:int=x.i && st:string=x.st && s:set<foo>=x.s && m1:map<int,string>=x.m);
	}
}