frontend/test/should_fail/exectype_AssignVarToAttribute4.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia ;> s:set<string> =set<string> && {x.s=s}); // x.s is set<foo>
	}
}